tests/derive_ui/bool_arg_enum.stderr
error[E0277]: the trait bound `bool: ArgEnum` is not satisfied
   --> tests/derive_ui/bool_arg_enum.rs:7:11
    |
7   |     opts: bool,
    |           ^^^^ the trait `ArgEnum` is not implemented for `bool`
    |
note: required by `clap::ArgEnum::from_str`
   --> src/derive.rs
    |
    |     fn from_str(input: &str, ignore_case: bool) -> Result<Self, String> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0618]: expected function, found enum variant `bool`
 --> tests/derive_ui/bool_arg_enum.rs:7:11
  |
7 |     opts: bool,
  |           ^^^^ call expression requires function
  |
help: `bool` is a unit variant, you need to write it without the parenthesis
  |
7 |     opts: bool,
  |           ~~~~
